--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,10 @@
-<h1>Edit Category</h1>
+<div class='container mt-big'>
+  <div class="row">
+    <div class="col inner-padding card col-12 align-self-center">
+      <h1>Edit Category</h1>
 
-<%= render "form", category: @category %>
+      <%= render "form", category: @category %>
+    </div>
+  </div>
+</div>
 
