--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,18 +17,25 @@
     <% if alert %>
       <p class="alert alert-danger"><%= alert %></p>
     <% end %>
-
-    <div class = "p-2">
-      <p class="navbar-text float-right">
+ 
+    <nav class="navbat-top navbar navbar-light justify-content-between p-h" style="background-color: #fff;">
+      <a class="navbar-brand" href="/">News</a>
+      
+    
+      <div>
         <% if user_signed_in? %>
-          Logged in as <strong><%= current_user.email %></strong>.
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+          <%= current_user.email %>
+          <%= link_to 'Post article', articles_path, :class => 'btn btn-primary navbar-link' %>
+          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'btn btn-primary navbar-link' %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'btn navbar-link'  %>
         <% else %>
-          <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-          <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+          <%= link_to "Sign up", new_user_registration_path, :class => 'btn btn-primary'  %>
+          <%= link_to "Login", new_user_session_path, :class => 'btn btn-secondary'  %>
         <% end %>
-      </p>
+      </div>
+    </nav>
+
+    <div class="p-2 mt">
       <%= yield %>
     </div>
   </body>
