--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,35 +1,39 @@
 <%= form_with model: article do |form| %>
-  <div>
-    <%= form.label :description %><br>
-    <%= form.text_area :description %>
-    <% article.errors.full_messages_for(:description).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <br>
-  <div>
-    <%= form.label :image %><br>
-    <%= form.file_field :image %>
-  </div>
-
-  <br>
-  <div>
-    <%= form.label :status %><br>
-    <%= form.select("status", [["Active", 1],["Inactive", 2]], { include_blank: true }) %>
-  </div>
-
-  <br>
-  <div>
-    <%= form.label :category_id %><br>
-    <%= form.select("category_id", Category.all.collect {|c| [c.description, c.id ] }, { include_blank: true }) %>
-    <% article.errors.full_messages_for(:category_id).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <br>
-  <div>
-    <%= form.submit class: "btn btn-primary" %>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-8'>
+      <div class="form-group">
+          <%= form.label :title %><br>
+          <%= form.text_field :title, class: 'form-control' %>
+        </div>
+        <div class="form-group mt">
+          <%= form.label :description %><br>
+          <%= form.text_area :description, class: 'form-control', rows: 10 %>
+          <% article.errors.full_messages_for(:description).each do |message| %>
+            <div><%= message %></div>
+          <% end %>
+        </div>
+      </div>
+      <div class='col-4'>
+        <div class="form-group">
+          <%= form.label :image %><br>
+          <%= form.file_field :image %>
+        </div>
+        <div class="form-group mt">
+          <%= form.label :status %><br>
+          <%= form.select("status", [["Active", 1],["Inactive", 2]], { include_blank: true }, class: 'form-control') %>
+        </div>
+        <div class="form-group mt">
+          <%= form.label :category_id %><br>
+          <%= form.select("category_id", Category.all.collect {|c| [c.description, c.id ] }, { include_blank: true }, class: 'form-control') %>
+          <% article.errors.full_messages_for(:category_id).each do |message| %>
+            <div><%= message %></div>
+          <% end %>
+        </div>
+        <div class="mt">
+          <%= form.submit class: "btn btn-primary" %>
+        </div>
+      </div>
+    </div>
   </div>
 <% end %>
