--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Edit Article</h1>
+<div class='container mt-big'>
+  <div class="row">
+    <div class="col inner-padding card col-12 align-self-center">
+      <h1>Edit Article</h1>
 
-<%= render "form", article: @article %>
+      <%= render "form", article: @article %>
 
-<br>
-<%= link_to "Articles", articles_path(@articles) %>
+      <br>
+      <%= link_to "Articles", articles_path(@articles) %>
+    </div>
+  </div>
+</div>
