--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,18 +1,19 @@
+
 <%= form_with model: category do |form| %>
-  <div>
+  <div class='form-group'>
     <%= form.label :description %><br>
-    <%= form.text_field :description %>
+    <%= form.text_field :description, class: 'form-control' %>
     <% category.errors.full_messages_for(:description).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
 
-  <div>
+  <div class='form-group'>
     <%= form.label :status %><br>
-    <%= form.text_field :status %>
+    <%= form.text_field :status, class: 'form-control' %>
   </div>
 
-  <div>
+  <div class="form-group mt">
     <%= form.submit %>
   </div>
 <% end %>
