--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class='container'>
+<div class='container mt-big'>
   <div class="row justify-content-md-center">
     <div class="col inner-padding card col-4 align-self-center">
       <h2>Sign up</h2>
