--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -2,9 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+#thumbnail-wrapper {
+  display: none;
+}
+
+.article-thumbnail {
+  overflow: hidden;
+  height: 300px;
+  position: relative;
+  img {
+    width: 100%;
+    position: absolute;
+    top: -25%;
+  }
+}
+
 .article-wrapper {
   margin-bottom: 40px;
   display: block;
+
+
   .article-content {
     padding: 20px;
     background-color: #fff;
@@ -20,6 +37,6 @@
     color: #474747;
   }
   img  {
-    max-width: 100%;
+    width: 100%;
   }
 }
