--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,8 +16,13 @@
       </div>
       <div class='col-4'>
         <div class="form-group">
+          <div id="thumbnail-wrapper" class="article-thumbnail">
+            <img id="output"/>
+          </div>
+        </div>
+        <div class="form-group">
           <%= form.label :image %><br>
-          <%= form.file_field :image %>
+          <%= form.file_field :image, onchange: "window.loadfile(event)" %>
         </div>
         <div class="form-group mt">
           <%= form.label :status %><br>
