--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
         <h1>Articles</h1>
         <%= link_to "New Article", new_article_path, class: 'btn btn-primary' %>
       </div>
-      <table id="dtBasicExample" class="mt table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+      <table id="dtBasicExample" class="mt table" cellspacing="0" width="100%">
         <thead>
           <tr>
             <th><%= link_to "Title", :sort => "title"%> </th>
@@ -40,7 +40,9 @@
         </tbody>
       </table>
       <br>
-      <%= link_to "Categories", categories_path %>
+      <div>
+        <%= link_to "Categories", categories_path, class: 'btn btn-link' %>
+      </div>
     </div>
   </div>
 </div>
