--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -29,7 +29,9 @@
       </table>
 
       <br>
-      <%= link_to "Articles", articles_path %>
+      <div>
+        <%= link_to "Articles", articles_path, class: 'btn btn-link' %>
+      </div>
 
     </div>
   </div>
