--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <div>
         <% if user_signed_in? %>
           <%= current_user.email %>
-          <%= link_to 'Post article', articles_path, :class => 'btn btn-primary navbar-link' %>
+          <%= link_to 'Articles', articles_path, :class => 'btn btn-primary navbar-link' %>
           <%= link_to 'Edit profile', edit_user_registration_path, :class => 'btn btn-primary navbar-link' %>
           <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'btn navbar-link'  %>
         <% else %>
