--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,15 @@ body {
 .mt-medium {
   margin-top: 50px;
 }
+
+.df {
+  display: flex;
+}
+
+.ai-center {
+  align-items: center;
+}
+
+.mr-auto {
+  margin-right: auto;
+}
