--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,8 +2,11 @@
   <div class="row">
     <div class="col inner-padding card col-12 align-self-center">
       <div class="justify-content-md-center">
-        <h1>Articles</h1>
-        <%= link_to "New Article", new_article_path, class: 'btn btn-primary' %>
+        <div class="df ai-center">
+          <h1 class="mr-auto">Articles</h1>
+          <%= link_to "Categories", categories_path, class: 'btn btn-link' %>
+          <%= link_to "New Article", new_article_path, class: 'btn btn-primary' %>
+        </div>
       </div>
       <table id="dtBasicExample" class="mt table" cellspacing="0" width="100%">
         <thead>
@@ -39,10 +42,6 @@
           <% end %>
         </tbody>
       </table>
-      <br>
-      <div>
-        <%= link_to "Categories", categories_path, class: 'btn btn-link' %>
-      </div>
     </div>
   </div>
 </div>
