--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,8 +2,11 @@
   <div class="row">
     <div class="col inner-padding card col-12 align-self-center">
       <div class="justify-content-md-center">
-      <h1>Categories</h1>
-      <%= link_to "New Category", new_category_path, class: 'btn btn-primary' %>
+        <div class="df ai-center">
+          <h1 class="mr-auto">Categories</h1>
+          <%= link_to "Articles", articles_path, class: 'btn btn-link' %>
+          <%= link_to "New Category", new_category_path, class: 'btn btn-primary' %>
+        </div>
       </div>
       <table class='table'>
         <tr>
@@ -27,12 +30,6 @@
 
         <% end %>
       </table>
-
-      <br>
-      <div>
-        <%= link_to "Articles", articles_path, class: 'btn btn-link' %>
-      </div>
-
     </div>
   </div>
 </div>
